--- a/package.json
+++ b/package.json
@@ -9,14 +9,9 @@
   "author": "denniselite",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "body-parser": "1.7.0",
-    "jsonwebtoken": "^7.3.0",
-    "moment": "^2.17.1",
-    "moment-timezone": "^0.5.13",
-    "mongoose": "^5.1.1",
-    "node-uuid": "^1.4.8",
-    "swagger-ui-express": "^2.0.13",
-    "sync-request": "^4.0.2"
+    "mongoose": "^5.7.5",
+    "morgan": "^1.9.1"
   }
 }
